k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neon
  namespace: neon
  labels:
    app: neon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: neon
  template:
    metadata:
      labels:
        app: neon
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: neon
          image: ghcr.io/ddmal/neon:develop-latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 2
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
            successThreshold: 1
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
          resources:
            requests:
              memory: "32Mi"
              cpu: "10m"
            limits:
              memory: "128Mi"
              cpu: "500m"
      volumes:
        - name: nginx-conf
          configMap:
            name: neon-nginx-conf
