k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: neon
  namespace: neon
spec:
  type: ClusterIP
  selector:
    app: neon
  ports:
    - port: 80
      targetPort: 80
